--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -18,4 +18,9 @@
         android:layout_height="wrap_content"
         android:text=" text created working on laptop ..." />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" text created working on desktop PC ..." />
+
 </LinearLayout>
